syntax = "proto3";

package log.v1;

option go_package = "github.com/WhitneyLampkin/api/log_v1";

message Record {
    bytes value = 1;
    uint64 offset = 2;
    uint64 term = 3;
    uint32 type = 4;
}

// RPC Endpoints
service Log {
    rpc Produce(ProduceRequest) returns (ProduceResponse) {}
    rpc Consume(ConsumeRequest) returns (ConsumeResponse) {}
    rpc ConsumeStream(ConsumeRequest) returns (stream ConsumeResponse) {}
    rpc ProduceStream(stream ProduceRequest) returns (stream ProduceResponse) {}
    // Endpoint resolvers call to get the cluster's servers
    rpc GetServers(GetServersRequest) returns (GetServersResponse) {}
}

// Endpoint Requests/Responses
message ProduceRequest {
    Record record = 1;
}

message ProduceResponse {
    uint64 offset = 1;
}

message ConsumeRequest {
    uint64 offset = 1;
}

message ConsumeResponse {
    Record record = 2;
}

message GetServersRequest {}

message GetServersResponse {
    repeated Server servers = 1;
}

message Server {
    string id = 1;
    string rpc_addr = 2;
    string is_leader = 3;
}